--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,6 @@
 		<div id="root">
 			not rendered
 		</div>
-		<script src="./App.js"></script>
+		<script src="./App.tsx"></script>
 	</body>
 </html>
